--- a/Projeto-calculadora/index.html
+++ b/Projeto-calculadora/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./index.css">
+  <script src="./index.js"></script>
   
-  <title>Frontend Mentor | Calculator app</title>
+  <title>Calculadora</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
+  <div class="container_calculadora teste">
+    <div class="calc_header teste">
+        <div onclick="theme()" class="btn_theme teste"><img src="./designs/images/refresh-free-icon-font.svg"></div>
+    </div>
+    <div class="calc_content teste">
+      <p id="resultado"></p>
+    </div>
+    <div class="calc_buttons teste">
+      <div class="btn_row">
+        <div onclick="insert('7')" class="btn teste"><p>7</p></div>
+        <div onclick="insert('8')" class="btn teste"><p>8</p></div>
+        <div onclick="insert('9')" class="btn teste"><p>9</p></div>
+        <div onclick="del()" class="btn del teste"><p>DEL</p></div>
+      </div>
+      <div class="btn_row">
+        <div onclick="insert('4')" class="btn teste"><p>4</p></div>
+        <div onclick="insert('5')" class="btn teste"><p>5</p></div>
+        <div onclick="insert('6')" class="btn teste"><p>6</p></div>
+        <div onclick="insert('+')" class="btn teste"><p>+</p></div>
+      </div>
+      <div class="btn_row">
+        <div onclick="insert('1')" class="btn teste"><p>1</p></div>
+        <div onclick="insert('2')" class="btn teste"><p>2</p></div>
+        <div onclick="insert('3')" class="btn teste"><p>3</p></div>
+        <div onclick="insert('-')" class="btn teste"><p>-</p></div>
+      </div>
+      <div class="btn_row">
+        <div onclick="insert('.')" class="btn teste"><p>.</p></div>
+        <div onclick="insert('0')" class="btn teste"><p>0</p></div>
+        <div onclick="insert('/')" class="btn teste"><p>/</p></div>
+        <div onclick="insert('*')" class="btn teste"><p>X</p></div>
+      </div>
+      <div class="btn_row">
+        <div onclick="clean()" class="btn reset teste"><p>RESET</p></div>
+        <div onclick="calculo()" class="btn result teste"><p>=</p></div>
+      </div>
+    </div>
+  </div>
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
 </html>
